fix almost invisible header icon

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Table/table.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Table/table.scss
@@ -102,7 +102,6 @@ $borderWidth: 1px;
 .header-button-cell {
     width: 1px;
     border-right: $borderWidth solid $headerButtonCellBorderColor;
-    color: $headerButtonCellTextColor;
     text-align: center;
 }
 
